# jisho_lib

./: CMakeLists.txt  README.md  Translation.h  apihandler.cpp  apihandler.h  main.cpp  networkhandler.h  requestparser.h
.github/workflows/: ci.yml
headers/: Translation.h  apihandler.h  networkhandler.h  requestparser.h  translation.h
headers/utils/: pimpl.h
src/: Translation.h  apihandler.cpp  apihandler.h  main.cpp  networkhandler.cpp  networkhandler.h  requestparser.cpp  requestparser.h
tests/: CMakeLists-gtest.txt.in  CMakeLists.txt  main.cpp  openssl_test.cpp  translate_test.cpp
